feat - 튜토리얼 스테이지(1스테이지 기반) 제작중

--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -363,7 +363,7 @@
     <ClCompile Include="Objects\Common\BlinkNodeObject.cpp" />
     <ClCompile Include="Objects\Manager\ThinkingPatternManager.cpp" />
     <ClCompile Include="Objects\Scenes\TutorialScene\TutorialControlObject.cpp" />
-    <ClCompile Include="Objects\Scenes\TutorialScene\TutorialManager.cpp" />
+    <ClCompile Include="Objects\Scenes\TutorialScene\TutorialPatternManager.cpp" />
     <ClCompile Include="Scenes\TutorialScene.cpp" />
     <ClCompile Include="Scripts\BubbleBox\BubbleEnd.cpp" />
     <ClCompile Include="Objects\Common\SignBoard.cpp" />
@@ -448,7 +448,7 @@
     <ClInclude Include="Objects\Common\BlinkNodeObject.h" />
     <ClInclude Include="Objects\Manager\ThinkingPatternManager.h" />
     <ClInclude Include="Objects\Scenes\TutorialScene\TutorialControlObject.h" />
-    <ClInclude Include="Objects\Scenes\TutorialScene\TutorialManager.h" />
+    <ClInclude Include="Objects\Scenes\TutorialScene\TutorialPatternManager.h" />
     <ClInclude Include="Scenes\TutorialScene.h" />
     <ClInclude Include="Scripts\BubbleBox\BubbleEnd.h" />
     <ClInclude Include="Objects\Common\SignBoard.h" />
