--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -320,6 +320,9 @@
     <ClCompile Include="Objects\Scenes\TutorialScene\TutorialControlObject.cpp">
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClCompile>
+    <ClCompile Include="Objects\Scenes\TutorialScene\TutorialEffectObject.cpp">
+      <Filter>Objects\SceneObject\TutorialScene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -553,6 +556,9 @@
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClInclude>
     <ClInclude Include="Objects\Scenes\TutorialScene\TutorialControlObject.h">
+      <Filter>Objects\SceneObject\TutorialScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Scenes\TutorialScene\TutorialEffectObject.h">
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClInclude>
   </ItemGroup>
