--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -359,6 +359,7 @@
   <ItemGroup>
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
+    <ClCompile Include="Scripts\Effect\EffectInstance2.cpp" />
     <ClCompile Include="Objects\Common\BattleBoard.cpp" />
     <ClCompile Include="Objects\Common\BlinkNodeObject.cpp" />
     <ClCompile Include="Objects\Manager\ThinkingPatternManager.cpp" />
@@ -444,6 +445,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
+    <ClInclude Include="Scripts\Effect\EffectInstance2.h" />
     <ClInclude Include="Objects\Common\BattleBoard.h" />
     <ClInclude Include="Objects\Common\BlinkNodeObject.h" />
     <ClInclude Include="Objects\Manager\ThinkingPatternManager.h" />
