--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -320,6 +320,7 @@
     <ClCompile Include="Objects\Scenes\TutorialScene\TutorialControlObject.cpp">
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClCompile>
+    <ClCompile Include="Scripts\Effect\EffectInstance2.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -555,5 +556,6 @@
     <ClInclude Include="Objects\Scenes\TutorialScene\TutorialControlObject.h">
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\Effect\EffectInstance2.h" />
   </ItemGroup>
 </Project>
