--- a/Contents/Contents.vcxproj
+++ b/Contents/Contents.vcxproj
@@ -360,6 +360,7 @@
     <ClCompile Include="Application\Game.cpp" />
     <ClCompile Include="Application\GameApp.cpp" />
     <ClCompile Include="Objects\Scenes\TutorialScene\TutorialEnterObject.cpp" />
+    <ClCompile Include="Objects\Scenes\TutorialScene\TutorialNumObject.cpp" />
     <ClCompile Include="Scripts\Effect\EffectInstance2.cpp" />
     <ClCompile Include="Objects\Common\BattleBoard.cpp" />
     <ClCompile Include="Objects\Common\BlinkNodeObject.cpp" />
@@ -448,6 +449,7 @@
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h" />
     <ClInclude Include="Objects\Scenes\TutorialScene\TutorialEnterObject.h" />
+    <ClInclude Include="Objects\Scenes\TutorialScene\TutorialNumObject.h" />
     <ClInclude Include="Scripts\Effect\EffectInstance2.h" />
     <ClInclude Include="Objects\Common\BattleBoard.h" />
     <ClInclude Include="Objects\Common\BlinkNodeObject.h" />
