--- a/Contents/Contents.vcxproj.filters
+++ b/Contents/Contents.vcxproj.filters
@@ -327,6 +327,9 @@
     <ClCompile Include="Objects\Scenes\TutorialScene\TutorialEnterObject.cpp">
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClCompile>
+    <ClCompile Include="Objects\Scenes\TutorialScene\TutorialNumObject.cpp">
+      <Filter>Objects\SceneObject\TutorialScene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application\GameApp.h">
@@ -567,6 +570,9 @@
     </ClInclude>
     <ClInclude Include="Scripts\Effect\EffectInstance2.h" />
     <ClInclude Include="Objects\Scenes\TutorialScene\TutorialEnterObject.h">
+      <Filter>Objects\SceneObject\TutorialScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Objects\Scenes\TutorialScene\TutorialNumObject.h">
       <Filter>Objects\SceneObject\TutorialScene</Filter>
     </ClInclude>
   </ItemGroup>
